# TeamUpdater

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PRD.md  README.md  SECURITY.md  eslint.config.js  mcp.json  package.json  pnpm-lock.yaml  vite.config.ts
.codex/environments/: environment.toml
.github/workflows/: ci.yml
bootstrap/: Install-TeamUpdaterV3.ps1  Test-TauriToolchain.ps1
docs/: architecture.md
docs/superpowers/plans/: 2026-04-06-optimization.md  2026-04-09-backdrop-context-reducer-refactor.md
docs/superpowers/specs/: 2026-04-06-optimization-design.md
src/: App.css  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  auth.rs  config.rs  detection.rs  lib.rs  logger.rs  main.rs  models.rs  sharefile_api.rs  sharefile_models.rs  source.rs  sync_engine.rs
src/components/: app-panels.test.tsx  app-panels.tsx
src/context/: SyncRuntimeContext.tsx
src/hooks/: useDriveDetection.ts  useRuntime.ts  useSettings.ts  useSyncRuntime.test.tsx  useSyncRuntime.ts
src/lib/: desktop.ts  errors.test.ts  errors.ts  runtime-reducer.test.ts  runtime-reducer.ts  runtime.test.ts  runtime.ts  settings.test.ts  settings.ts
src/views/: FirmwareRetentionView.tsx  FolderSelectionView.tsx  HistoryView.tsx  HomeView.tsx  PreviewView.tsx  app-views.test.tsx
