[package]
name = "teamupdater-v3"
version = "0.1.0"
description = "ShareFile to local disk replicator"
authors = ["ckent"]
edition = "2021"

[lib]
name = "teamupdater_v3_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = [] }
thiserror = "2"
walkdir = "2"
