[package]
name = "teamupdater-v3"
version = "0.1.0"
description = "ShareFile to local disk replicator"
authors = ["ckent"]
edition = "2021"

[lib]
name = "teamupdater_v3_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6"
futures-util = "0.3"
hmac = "0.12"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.0", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
url = "2"
walkdir = "2"
